--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gestão de Projetos</title>
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="overlay hidden" id="modalOverlay"></div>
@@ -63,6 +63,6 @@
     </footer>
   </div>
 
-  <script type="module" src="../script/script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
